# kasti

./: .gitignore  Makefile  README.md  default.nix  neovim.nix  neovimrc.vim
.circleci/: config.yml
backend/: ElmGen.hs  default.nix  elm-export.nix  kasti.cabal  kasti.nix  package.yaml  schema_postgres.sql  schema_sqlite.sql  servant-elm.nix  shell.nix  stack.yaml
backend/app/: Main.hs
backend/elm-gen/: Main.hs
backend/src/: Api.hs  Context.hs  ElmGen.hs  EpisodeDb.hs  GetFeed.hs  Lib.hs  PodEff.hs  ServantStuff.hs  Types.hs
docker-images/: Dockerfile.build  Dockerfile.run
dockerbase/: Dockerfile
frontend/: Browse.elm  Client.elm  Episode.elm  Helpers.elm  Play.elm  Types.elm  Views.elm  browse.html  default.nix  elm-package.json  elm-srcs.nix  elm.json  foo.elm
frontend/Client/: Types.elm
frontend/src/: Browse.elm  Client.elm  Helpers.elm  Main.elm  Types.elm  Views.elm
scripts/: Dockerfile  default.nix  episodedb.py  python.nix  radiorock.py  requirements.txt  setup.cfg  update_rss.py  videotuomarit.py  vim.nix
scripts/.vim/: settings.json
scripts/src/: episodedb.py  main.py  radiorock.py  update_rss.py  videotuomarit.py
server/: kasti.service  playbook.yml
