name:                kasti
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kasti#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , GetFeed
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , vector
                     , containers
                     , text
                     , optparse-applicative
                     , aeson
                     , lens
                     , lens-aeson
                     , time
                     , text-format
                     , scotty
                     , feed
                     , wreq

                     , mtl
                     , random
                     , parallel
                     , async
                     , process

                     , sqlite-simple
                     , filepath
                     , directory

  default-language:    Haskell2010

executable kasti-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kasti
  default-language:    Haskell2010

test-suite kasti-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kasti
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kasti
